data-plant/bases/app.yaml
apiVersion: v1
items:
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: data-analysis
      version: v1
    name: data-analysis
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: data-analysis:latest
    postCommit: {}
    resources: {}
    source:
      contextDir: data-plant-java/data-analysis
      git:
        ref: main
        uri: https://github.com/cgfulton/mlops-plant.git
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: ubi-quarkus-native-s2i:20.3.1-java11
      type: Source
    triggers:
    - github:
        secret: -cSZIjO9niOyGqMgTxlV
      type: GitHub
    - generic:
        secret: oWmRYIlccO-gqKBr5SKY
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
  status:
    lastVersion: 0
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"data-analysis:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"data-analysis\")].image"}]'
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: data-analysis
      version: v1
    name: data-analysis
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: data-analysis
        deployment: data-analysis
        version: v1
    strategy: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: data-analysis
          deployment: data-analysis
          version: v1
      spec:
        containers:
        - image: ' '
          name: data-analysis
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: data-analysis
      version: v1
    name: data-analysis
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: data-analysis
      deployment: data-analysis
      version: v1
  status:
    loadBalancer: {}
kind: List
metadata: {}
