data-plant/bases/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: patch-metadata-labels-app
    version: patch-metadata-labels-version
  name: patch-metadata-name
  namespace: patch-metadata-namespace
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: patch-spec-selector-app
    deployment: patch-spec-selector-deployment
    version: patch-spec-selector-version
  sessionAffinity: None
#  type: ClusterIP
