data-plant/bases/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: patch-metadata-name
spec:
  host: patch-spec-host
  subsets:
    - name: v1
      labels:
        version: v1
