data-plant/bases/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    account: patch-metadata-labels-account
    app: patch-metadata-labels-app
    version: patch-metadata-labels-version
  name: patch-metadata-name
  namespace: patch-metadata-namespace
spec:
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: patch-spec-to-name
    weight: 100
  wildcardPolicy: None
